Proyecto finalizado: botón de eliminar y formato de página de ropa de harry potter

--- a/Proyecto/home.html
+++ b/Proyecto/home.html
@@ -8,24 +8,25 @@
 </head>
 <body>
 
-    <h1>Food Fast</h1>
+    <h1>Ropa de Harry Potter</h1>
 
-    <section class="food-container">
+    <section class="product-container">
         <section class="description-container">
-            <h2>Branko</h2>
-            <p>Descubre nuestro platillo principal</p>
+            <h2>Camiseta Hogwarts</h2>
+            <p>Diseño exclusivo para los fans de Harry Potter</p>
         </section>
-        <img src="https://images.pexels.com/photos/2673353/pexels-photo-2673353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQFV_5Ov6gV3Qz6oaePA5ORbo2KSlxw6dgN6Dk6Ip35b1eDexk3dka_aBUD84yd7P95GeloTLRCkJjjsie2UFyk8B_xstrBiX9Q-khAyJhuSjANNF_2sn-CuPU&usqp=CAE" alt="Camiseta de Harry Potter">
     </section>
     
     <section class="comment-container">
         <h2>Comentarios</h2>
         <p id="user-info"></p>
         <textarea placeholder="Publica un comentario" id="comment"></textarea>
-        <button onclick="post()">Publicar</button>
+        <button onclick="postComment()">Publicar</button>
 
         <section id="comment-section"></section>
     </section>
-    <script src="home.html"></script>
+
+    <script src="home.js"></script>
 </body>
 </html>
