--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -11,18 +11,22 @@
     <section class="container">
         <section class="form-container">
             <section class="login-container">
-                <h1>Inicio de Sesion</h1>
+                <h1>Inicio de Sesión</h1>
 
-                <label for="">Username:</label>
+                <label for="username">Username:</label>
                 <input type="text" id="username">
 
-                <label for="">Password:</label>
+                <label for="password">Password:</label>
                 <input type="password" id="password">
 
-                <button onclick="logIn()">Iniciar sesion</button>
+                <button onclick="logIn()">Iniciar sesión</button>
                 <p id="error" class="error"></p>
             </section>
         </section>
 
         <section class="image-container"></section>
     </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
