--- a/GeneradorContraseñas/index.html
+++ b/GeneradorContraseñas/index.html
@@ -10,6 +10,14 @@
     <div class="container">
         <h2>Generador de Contraseñas</h2>
         <input type="text" id="password" readonly>
+        <label for="length">Longitud:</label>
+        <input type="number" id="length" min="1" max="20" value="12">
+        <div>
+            <label><input type="checkbox" id="uppercase" checked> Incluir mayúsculas</label><br>
+            <label><input type="checkbox" id="lowercase" checked> Incluir minúsculas</label><br>
+            <label><input type="checkbox" id="numbers" checked> Incluir números</label><br>
+            <label><input type="checkbox" id="symbols"> Incluir símbolos</label>
+        </div>
         <button onclick="generatePassword()">Generar</button>
     </div>
     <script src="script.js"></script>
